--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,29 +2,30 @@
 @plugin "flowbite-react/plugin/tailwindcss";
 @source "../../.flowbite-react/class-list.json";
 
-/* Theme variables */
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-  --font-sans: "Inter", sans-serif;
-  --font-mono: "Fira Code", monospace;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 /* Base Styles */
 body {
-  background-color: var(--background);
-  color: var(--foreground);
-  font-family: var(--font-sans);
+  @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100;
 }
 
 /* Global H1 Tailwind Styles */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply leading-none font-bold tracking-tight text-gray-900 dark:text-white;
+}
+
 h1 {
-  @apply text-4xl leading-none font-extrabold tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white;
+  @apply text-4xl md:text-5xl lg:text-6xl;
+}
+
+/* Define typography styles */
+h2 {
+  @apply text-3xl;
+}
+
+h3 {
+  @apply text-2xl;
 }
